--- a/backend/package.json
+++ b/backend/package.json
@@ -10,18 +10,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "global": "^4.4.0",
+    "jest": "^29.7.0",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.0",
+    "lib": "^5.1.0",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "node-gyp": "^9.3.1",
     "nodemon": "^2.0.22",
-    "npm-install-global": "^1.0.0"
+    "npm-install-global": "^1.0.0",
+    "render": "^0.1.4",
+    "run": "^1.4.0",
+    "src": "^1.1.2",
+    "test": "^3.3.0",
+    "yarn": "^1.22.21"
   }
 }
